{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 137,
  "lineage": "3586d4dd-24a3-3c19-f172-01b90c8c772c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3bf168583d2c954",
            "arn": "arn:aws:ec2:us-east-1:148761658767:elastic-ip/eipalloc-0e3bf168583d2c954",
            "domain": "vpc",
            "id": "eipalloc-0e3bf168583d2c954",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-5-81.compute-1.amazonaws.com",
            "public_ip": "3.234.5.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-nat-gateway-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-nat-gateway-eip",
              "Project": "devops-na-nuvem-week"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761658767:internet-gateway/igw-0b7f6810f4ebdba40",
            "id": "igw-0b7f6810f4ebdba40",
            "owner_id": "148761658767",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-internet-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-internet-gateway",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-00311dfdfc1f7c980"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e3bf168583d2c954",
            "association_id": "eipassoc-00d143dae99cd480d",
            "connectivity_type": "public",
            "id": "nat-0e32cde6293a9728a",
            "network_interface_id": "eni-098b19e1d6293a903",
            "private_ip": "10.0.0.31",
            "public_ip": "3.234.5.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0371532bb81b4b403",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-nat-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-nat-gateway",
              "Project": "devops-na-nuvem-week"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761658767:route-table/rtb-0e8c70a18b56b260e",
            "id": "rtb-0e8c70a18b56b260e",
            "owner_id": "148761658767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e32cde6293a9728a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-private-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-route-table",
              "Project": "devops-na-nuvem-week"
            },
            "timeouts": null,
            "vpc_id": "vpc-00311dfdfc1f7c980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761658767:route-table/rtb-0f8acc4c162afc20f",
            "id": "rtb-0f8acc4c162afc20f",
            "owner_id": "148761658767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7f6810f4ebdba40",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-route-table",
              "Project": "devops-na-nuvem-week"
            },
            "timeouts": null,
            "vpc_id": "vpc-00311dfdfc1f7c980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d0a91e2a6b6962f",
            "route_table_id": "rtb-0e8c70a18b56b260e",
            "subnet_id": "subnet-055c794336da2f394"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001ccfd46c84d6e3b",
            "route_table_id": "rtb-0e8c70a18b56b260e",
            "subnet_id": "subnet-0a1d0950ad44ca171"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052797faf0d774f00",
            "route_table_id": "rtb-0f8acc4c162afc20f",
            "subnet_id": "subnet-0371532bb81b4b403"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028c1ae8e90309015",
            "route_table_id": "rtb-0f8acc4c162afc20f",
            "subnet_id": "subnet-02ca2877b208d89f8"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761658767:subnet/subnet-055c794336da2f394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055c794336da2f394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761658767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1a",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-00311dfdfc1f7c980"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761658767:subnet/subnet-0a1d0950ad44ca171",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1d0950ad44ca171",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761658767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-private-subnet-us-east-1b",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-00311dfdfc1f7c980"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761658767:subnet/subnet-0371532bb81b4b403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0371532bb81b4b403",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761658767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1a",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-00311dfdfc1f7c980"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761658767:subnet/subnet-02ca2877b208d89f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ca2877b208d89f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "148761658767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc-public-subnet-us-east-1b",
              "Project": "devops-na-nuvem-week"
            },
            "vpc_id": "vpc-00311dfdfc1f7c980"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:148761658767:vpc/vpc-00311dfdfc1f7c980",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-04bd39d66d8ac86a2",
            "default_route_table_id": "rtb-0136bddc5732f2986",
            "default_security_group_id": "sg-0c8b701fc8e891a00",
            "dhcp_options_id": "dopt-0145044d4f27cb094",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00311dfdfc1f7c980",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0136bddc5732f2986",
            "owner_id": "148761658767",
            "tags": {
              "Name": "devops-na-nuvem-week-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "devops-na-nuvem-week-vpc",
              "Project": "devops-na-nuvem-week"
            }
          }
        }
      ]
    }
  ]
}